--- a/app/views/user/signup.html.erb
+++ b/app/views/user/signup.html.erb
@@ -2,7 +2,7 @@
 <%= @user.errors.full_messages.first if @user.errors.any? %>
   <h3>Register New User</h3>
   <%= label_tag(:email, "Email:") %>
-  <%= text_field_tag(:email) %><BR>
+  <%= text_field_tag('email', @user.email) %><BR>
   <%= label_tag(:pass, "Password:") %>
   <%= password_field_tag(:pass) %>
   <BR>
