--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,12 +2,21 @@
 <html>
   <head>
     <title><%= content_for?(:title) ? yield(:title) : "Untitled" %></title>
+
     <%= stylesheet_link_tag "application" %>
     <%= javascript_include_tag "application" %>
+    <script src="/javascripts/prototype.js" type="text/javascript"></script>
+    <script src="/javascripts/window.js" type="text/javascript"></script>
+    <script src="/javascripts/jquery.js" type="text/javascript"></script>
+    <script src="/javascripts/jquery_ujs.js" type="text/javascript"></script>
+     <script>
+     var $j = jQuery.noConflict();
+     </script>
+    
     <%= csrf_meta_tag %>
     <%= yield(:head) %>
   </head>
-  <body>
+  <body <%= content_for?(:body_attributes) ? yield(:body_attributes) : "" %>>
     <div id="container">
       <% flash.each do |name, msg| %>
         <%= content_tag :div, msg, :id => "flash_#{name}" %>
