--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,200 +1,363 @@
-/* @override http://www.macrabbit.Lineupom/cssedit/welcome/2.5/welcome.Lineupss */
+/* 	RotoStarter CSS v2 by LL */
+
+/* Sample Fonts
+
+	Century Gothic, sans-serif
+	Verdana, Geneva, sans-serif
+	Arial, Helvetica, sans-serif
+*/
+
+/*	RotoStarter Colors
+
+	background-color: #5A4A42;
+	background-color: #FFFFFF;
+	background-color: #00AEEF
+	color: #5A4A42;
+	color: #00AEEF;
+	EFF7FD light blue
+	e0f2fe bluey
+	e0edfe purply
+	ebe5e2 brown
+*/
 
 body {
-	margin-top:0;
-	margin-left:auto;
-	margin-right:auto;
-	margin-bottom:0;
-	height:auto;
-	background-color: #5A4A42;
-/*	font: normal normal 10px Arial, Helvetica, sans-serif;*/
+	margin: auto;
+	height:100%;
+	min-height:100%
+	width: 95%;
+	font: normal 12px Verdana, Geneva, sans-serif;	
+	background-color: #FFFFFF;
+}
+
+#RSWrapper {
+	background-color: #FFFFFF;
+	padding-top: 20px;
+	padding-bottom: 40px;
+	width: 95%;
+	height: 95%;
+	min-height: 100%;
+	margin: auto;
+}
+
+#RSHeader {
+	background-color: #eeebe9;
+	width: 100%;
+	height: 100%;
+	min-height: 100%;
+	padding-top: 20px;
+	padding-bottom: 10px;
+}
+
+#RSNav {
+	background-color: #906e59;
+	width: 100%;
 	
-	font: normal 12px Eurostile;
 }
 
-#container {
-    background-color: #FFFFFF;
-    border: 1px solid black;
-    margin: 20px auto 0;
-    padding: 20px 40px;
-    width: 75%;
-
+#RSSidebar {
+	background-color: #FFFFFF;
+	float: left;
+	width: 250px;
+	display: inline;
 }
 
-.Dash {
-	color: #5A4A42;
-	font: 12px Eurostile;
+#RSMiddleDivider {
+	background-color: #FFFFFF;
+	width: 10px;
+	display: inline;
 }
 
-.DashTagline {
-	color: #5A4A42;
-	font: bold 14px Eurostile;
+#RSMain {
+	background-color: #FFFFFF;
+	margin-left: 260px;
+	display: inline;
 }
 
-.DashRight {
-	color: #5A4A42;
-	font: 12px Eurostile;
-	text-align: right;
+#RSFooter {
+	background-color: #906e59;
+	width: 100%;
+	
 }
 
-.DashHeader {
+#RSEdge {
+	background-color: #FFFFFF;
+	width: 100%;
+}
+
+#RSBlueEdge {
+	background-color: #EFF7FD;
+	width: 100%;
+}
+
+#RSBrownEdge {
+	background-color: #eeebe9;
+	width: 100%;
+}
+
+
+
+/* Header Div Styles */
+
+.HeaderTitle {
 	color: #00AEEF;
-	font: bold 16px Eurostile;
+	padding-left: 20px;
+	font: bold 20px Arial, Helvetica, sans-serif;
 }
 
-.DashSubHeader {
+.HeaderTitleBrown {
+	padding-left: 20px;
 	color: #5A4A42;
-	font: bold 12px Eurostile;
-	padding-left: 0px;
-	padding-right: 0px;
-	padding-top: 5px;
+	font: 14px Arial, Helvetica, sans-serif;
+}
+
+/* Nav Div Styles */
+
+
+.NavHeadLeft, .NavHeadLeft a {
+	font: 12px Verdana, Geneva, sans-serif;
+	color: #FFFFFF;
+	padding-top: 4px;
 	padding-bottom: 5px;
 }
 
+/* Sidebar Div Styles */
 
-.LineupSelect {
-	border: 1px solid #333;
-	font-size: 8px;
-	font-family: Arial, Helvetica, sans-serif;
-	font-weight: normal;
-	font-variant: normal;
-}	
-
-.LineupOption {
-	background:green;
-	font-size: 8px;
-	font-family: Arial, Helvetica, sans-serif;
-	font-weight: normal;
-	font-variant: normal;
-}	
-
-
-.LineupHeader {
-	padding-left: 0px;
-	padding-right: 0px;
-	padding-top: 2px;
-	padding-bottom: 2px;
-	font: small-caps bold 16px Arial, Helvetica, sans-serif;
-	text-align: left;
+.SideTitle {
+	color: #00AEEF;
+	font: bold 18px Verdana, Geneva, sans-serif;
+	padding-left: 10px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	background-color: #f7f7f8;
 }
 
-.LineupHeaderTiny {
-	padding-left:10px;
-	padding-right: 10px;
-	padding-top: 2px;
-	padding-bottom: 2px;
-	font: small-caps bold 8px Arial, Helvetica, sans-serif;
-	text-align: left;
+.SideTitleBrown {
+	color: #5A4A42;
+	font: 14px Verdana, Geneva, sans-serif;
 }
 
-.LineupTopEdgeBold {
-	padding-left:10px;
-	padding-right: 10px;
-	padding-top: 2px;
-	padding-bottom: 2px;
-	border: solid 0 #060; 
-	border-left-width:1px;
-	border-right-width:1px;
-	border-top-width:1px;
-	border-style:solid;
-	border-color:#00AEEF;
-	font-weight: bold;
-	font-size: 120%;
-	font-variant: normal;
+.SideHeader {
+	color: #5A4A42;
+	font: bold 14px Verdana, Geneva, sans-serif;
+	
 }
 
-.LineupTopEdge {
-	padding-left:10px;
-	padding-right: 10px;
-	padding-top: 2px;
-	padding-bottom: 2px;
-	border: solid 0 #060; 
-	border-left-width:1px;
-	border-right-width:1px;
-	border-top-width:1px;
-	border-style:solid;
-	border-color:#00AEEF;
-	font-variant: normal;
-	font-size: 10px;
-}
-
-.LineupTop {
-	padding-left:10px;
-	padding-right: 10px;
-	padding-top: 2px;
-	padding-bottom: 2px;
-	border: solid 0 #060; 
-	border-top-width:1px;
-	border-style:solid;
-	border-color:#00AEEF;
-	font-variant: normal;
-	font-size: 10px;
-}
-
-.LineupBotEdge {
-	padding-left:10px;
-	padding-right: 10px;
-	padding-top: 2px;
-	padding-bottom: 2px;
-	border: solid 0 #060; 
-	border-top-width:1px;
-	border-bottom-width: 1px;
-	border-left-width:1px;
-	border-right-width:1px;
-	border-style:solid;
-	border-color:#00AEEF;
-	font-variant: normal;
-	font-size: 10px;
-}
-
-.LineupRightEdge {
-	padding-left:10px;
-	padding-right: 10px;
-	padding-top: 2px;
-	padding-bottom: 2px;
-	border: solid 0 #060; 
-/*	border-top-width:1px;
-	border-bottom-width: 1px;
-	border-left-width:1px;
-	border-right-width:1px; */
-	border-left-width:1px;	
-	border-style:solid;
-	border-color:#00AEEF;
-	font-variant: normal;
-	font-size: 10px;
-}
-
-.LineupBotEdgeBold {
-	padding-left:10px;
-	padding-right: 10px;
-	padding-top: 2px;
-	padding-bottom: 2px;
-	border: solid 0 #060; 
-	border-top-width: 1px;
-	border-bottom-width: 1px;
+.SideInactive {
+	color: #00AEEF;
+	font: bold 10px Verdana, Geneva, sans-serif;
+	padding: 8px 12px;
+	border: 0 solid #FFFFFF; 
 	border-left-width: 1px;
+	border-top-width: 1px;
 	border-right-width: 1px;
-	border-style:solid;
-	border-color:#00AEEF;
-	font-weight: bold;
-	font-size: 120%;
-	font-variant: normal;
+	text-align: left;
+	background-color: #f7f7f8;
 }
 
-.LineupBot {
+.SideActive {
+	color: #00AEEF;
+	font: bold 10px Verdana, Geneva, sans-serif;
+	padding: 8px 12px;
+	border: 0 solid #FFFFFF; 
+	border-left-width: 1px;
+	border-top-width: 1px;
+	border-right-width: 1px;	
+	text-align: left;
+	background-color: #EFF7FD;
+}
+
+.SideBrown {
+	color: #5A4A42;
+	font: 9px Verdana, Geneva, sans-serif;
+}
+
+.SideClose {
+	border: 0 solid #FFFFFF;
+	border-bottom-width: 1px;	
+}
+
+
+
+
+/* Main Div Styles */
+
+
+
+.MainTitle {
+	color: #00AEEF;
+	font: bold 18px Verdana, Geneva, sans-serif;
+	padding-left: 10px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	background-color: #f7f7f8;
+}
+
+.MainTitleBrown {
+	color: #5A4A42;
+	font: 14px Verdana, Geneva, sans-serif;
+}
+
+.MainSubTitle {
+	color: #5A4A42;
+	text-align: right;
+	font:  12px Verdana, Geneva, sans-serif;
+	padding-right: 10px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+
+
+.MainSubTitleLinks, .MainSubTitleLinks a {
+	color: #00AEEF;
+	font: 12px Verdana, Geneva, sans-serif;
+	text-align: right;
+	padding-top: 4px;
+	padding-bottom: 4px;
+	
+}
+
+.MainHeader {
+	font: bold 14px Verdana, Geneva, sans-serif;
+	padding-left: 10px;
+	padding-top: 2px;
+	padding-bottom: 2px;
+}
+
+.MainTinyHeader {
+	font: bold 10px Verdana, Geneva, sans-serif;
 	padding-left:10px;
 	padding-right: 10px;
 	padding-top: 2px;
 	padding-bottom: 2px;
-	border: solid 0 #060; 
-	border-top-width: 1px;
-	border-bottom-width: 1px;
-	border-style:solid;
-	border-color:#00AEEF;
-	font-variant: normal;
+	background-color: #e0f2fe;
+	
+}
+
+.MainOption {
 	font-size: 10px;
+	font-family: Arial, Helvetica, sans-serif;
+	font-weight: normal;
+	font-variant: normal;
+}
+
+.MainRowBeg {
+	padding-left:10px;
+	padding-right: 10px;
+	padding-top: 2px;
+	padding-bottom: 2px;
+	border: 0 solid #FFFFFF; 
+	border-left-width:1px;
+	border-top-width:1px;
+
+	border-right-width:1px;	
+	font: normal 12px Arial, Helvetica, sans-serif;
+	background-color: #f7f7f8;
+}
+
+.MainRow {
+	padding-left:10px;
+	padding-right: 10px;
+	padding-top: 2px;
+	padding-bottom: 2px;
+	border: 0 solid #FFFFFF; 
+	border-top-width:1px;
+	border-style:solid;
+	font: normal 12px Arial, Helvetica, sans-serif;
+	background-color: #f7f7f8;
+}
+
+.MainRowEnd {
+	padding-left:10px;
+	padding-right: 10px;
+	padding-top: 2px;
+	padding-bottom: 2px;
+	border: 0 solid #FFFFFF;
+	border-right-width: 1px;	
+	border-top-width: 1px;
+	border-style:solid;
+	font: normal 10px Arial, Helvetica, sans-serif;	
+	background-color: #f7f7f8;
+}
+
+.MainClose {
+	border: 0 solid #FFFFFF;
+	border-bottom-width: 1px;	
+}
+
+.MainSelect {
+	border: 1px solid #333;
+	font: 10px Arial, Helvetica, sans-serif;
+}
+
+/* Dashboard Page Styles */
+
+.DashInactive {
+	font: 12px Verdana, Geneva, sans-serif;
+	padding-left:20px;
+	padding-right: 20px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	border: 0 solid #FFFFFF; 
+	border-left-width: 1px;
+	border-top-width: 1px;
+	border-right-width: 1px;
+	text-align: left;
+	background-color: #f7f7f8;
+	color: #00AEEF;
+}
+
+.DashActive {
+	color: #00AEEF;
+	font: bold 14px Verdana, Geneva, sans-serif;
+	padding-left: 30px;
+	padding-right: 30px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	border: 0 solid #FFFFFF; 
+	border-left-width: 1px;
+	border-top-width: 1px;
+	border-right-width: 1px;	
+	text-align: left;
+	background-color: #EFF7FD;
+
+}
+.DashActiveBrown {
+	color: #5A4A42;
+	font: 12px Verdana, Geneva, sans-serif;
 }
 
 
+.DashHeaderTop {
+	color: #5A4A42;
+	font: bold 20px Verdana, Geneva, sans-serif;
+	padding-left: 10px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	background-color: #e0f2fe;
+}
 
+.DashHeaderTopBrown {
+	color: #5A4A42;
+	font: 16px Verdana, Geneva, sans-serif;
+}
+
+.DashHeaderLeft {
+	color: #00AEEF;
+	font: 12px Verdana, Geneva, sans-serif;
+	padding-left: 10px;
+	padding-right: 10px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	background-color: #f7f7f8;
+}
+
+.DashHeaderRight {
+	color: #5A4A42;
+	font: 12px Verdana, Geneva, sans-serif;
+	padding-left: 10px;
+	padding-right: 10px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	background-color: #f7f7f8;
+}
 
